--- a/j184.md
+++ b/j184.md
@@ -96,17 +96,25 @@ right = N
 x = 1
 direction = ">>"
 for y in N to 1:
-  next = index of the rock with height y
-  if direction == ">>":
-    if next <= right and next >= left:
-        right = next
+    next = index of the rock with height y
+    if direction == ">>":
+        if next <= right and next >= left:
+            right = next
         x = right * 3 - 1
-    else if next >= left and next <= right:
-        left = next
+        update steps
+        direction = "<<"
+    else: # direction == "<<"
+        else if next >= left and next <= right:
+            left = next
         x = left * 3 + 1
-    if x <= 0:
-        print ESCAPE info
-        terminate program
+        update steps
+        direction = ">>"
+        
+        if x <= 0:
+            print ESCAPE info
+            terminate program
+
 print DROP info
+
 ```
 
