--- a/j184.md
+++ b/j184.md
@@ -87,7 +87,7 @@ Also estimate its run time when 1 ≤ N ≤ 200000.
 Only O(N) solution can score 100 points. So how would you design an O(N) solution for this problem?
 
 - What if we don't simulate step by step? Instead we fly the bird straight to the rock that blocks it.
-- How do we determine where is the block that blocks it?
+- How do we determine where is the rock that blocks it?
 
 ```
 H[1:N] is the height of the N rocks
@@ -96,7 +96,7 @@ right = N
 x = 1
 direction = ">>"
 for y in N to 1:
-    next = index of the rock with height y
+    next = look up index of the rock with height y
     if direction == ">>":
         if next <= right and next >= left:
             right = next
@@ -117,4 +117,4 @@ for y in N to 1:
 print DROP info
 
 ```
-
+- How do we lookup the index of the rock with height y in O(1) time? You need to do that in constant time in order to have an O(N) algorithm.
